--- a/frontend/src/styles/HomePage.css
+++ b/frontend/src/styles/HomePage.css
@@ -222,6 +222,7 @@
   justify-content: center;
   align-items: center;
   appearance: none;
+  background: none;
   border: 1px solid var(--primary-color-lighter);
   cursor: pointer;
   overflow: hidden;
