--- a/frontend/src/styles/ProductList.css
+++ b/frontend/src/styles/ProductList.css
@@ -31,6 +31,7 @@
   display: flex;
   overflow: hidden;
   appearance: none;
+  background: none;
   border: 1px solid var(--primary-color-lighter);
   cursor: pointer;
   position: relative;
